# consumercheck

./: .dir-locals.el  .gitignore  .hgignore  .hgtags  CCInnoPack.iss  DESCRIPTION.rst  LICENSE.txt  MANIFEST.in  README.txt  about_consumercheck.py  bbfreeze-cc.py  bbfreeze_cc.py  buildout.cfg  cc-ver.json  cc.hgstyle  cc_test.py  changelog_v0.6.5.txt  changelog_v0.7.0.txt  consumercheck  consumercheck.py  consumercheck.wxs  dataset.py  dataset_collection.py  dataset_collection_selection_list_ui.py  dataset_selector_ui.py  datasets_ui.py  ds.py  ds_ui.py  dsl_check_list.py  dummy_license.rtf  file_import.py  file_import_ui.py  file_importer.py  file_importer_ui.py  import_data.py  main_ui.py  make.py  make_bbfreeze.bat  make_exe.bat  make_wix.bat  (+45 more)
ConsumerCheck/: __init__.py  about.tmpl  about_consumercheck.py  basic_stat_gui.py  basic_stat_model.py  cc_config.py  cc_start.py  conjoint_base.py  conjoint_gui.py  conjoint_machine.py  conjoint_model.py  consumercheck.py  cross_val.py  dataset.py  dataset_matrix.py  ds_table_view.py  dummify.py  exception_handler.py  importer_file_base.py  importer_interfaces.py  importer_main.py  importer_text_file.py  importer_xls_file.py  ind_diff_gui.py  ind_diff_model.py  ind_diff_picker.py  main_ui.py  mvr.py  pca.py  pca_gui.py  pca_model.py  pcr.py  plot_base.py  plot_conjoint.py  plot_ev_line.py  plot_histogram.py  plot_pc_scatter.py  plot_sector.py  plot_windows.py  plscr_gui.py  (+16 more)
datasets/: Ost_forbruker.txt  Ost_forbruker.xls  Ost_sensorikk.txt  Ost_verdier.txt  Ost_verdier.xls  Ost_verdier_t.txt
docs/: Makefile  api-reference.rst  cc-coding-standard.rst  conf.py  data-structures.rst  event_driven.rst  housekeeping.rst  plotting.rst  plugin-arkitektur.rst  sphinx-index.rst  statistical-methods.rst  tools-and-building-blocks.rst  user-documentation.rst
docs-developer/: api-reference.rst  application-distribution.rst  chaco.dot  data-structures.rst  dependencies.rst  developer-documentation.rst  domain-model.rst  event-driven.rst  housekeeping.rst  make.bat  method-module-anatomy.rst  plot_family.dot  plot_frame.dot  plotting.rst  plugin.dot  sphinx-index.rst  statistical-methods.rst
docs-user/: Makefile  make.bat
explore/: test_data.py  tull_window.py
pyi-hooks/: hook-enable.py  hook-lib2to3.py  hook-numpy.py  hook-pyface.py  hook-traitsui.py
pyi-specs/: Consumercheck.spec  Info.plist
setuputils/: commands.py
src/: RUN_conjoint_New.py  about_consumercheck.py  basic_stat_gui.py  basic_stat_model.py  cc_config.py  checkbox.py  combination_table.py  config.py  conjoint.py  conjoint_base.py  conjoint_container_mvc.py  conjoint_gui.py  conjoint_machine.py  conjoint_model.py  conjoint_mvc.py  conjoint_one.py  consumercheck.py  cross_val.py  dataset.py  dataset_collection.py  dataset_collection_selection_list_ui.py  dataset_container.py  dataset_matrix.py  dataset_ng.py  dataset_selector_ui.py  dialogs.py  ds_matrix_view.py  ds_slicer_view.py  ds_table_view.py  ds_ui.py  dsl_check_list.py  exception_handler.py  file_importer.py  file_previewer.py  importer_file_base.py  importer_interfaces.py  (+50 more)
(+169 files in other folders)
