[sdist]
# formats=zip
# keep-temp=0


[metadata]
description-file = README.md


[wheel]
# universal = 1


# [flake8]
# ignore = E402,E303
# max-line-length = 160
# exclude = tests/*
# max-complexity = 10


[pytest]
minversion = 2.8.5
addopts = --capture=no
# --verbose -rfEsxXw --assert=rewrite --tb=long --maxfail=2 -m '(not ui) and (not slow)'
markers =
        ui: Require UI interaction.
        renv: Test calculation in R environment.
        model: Test non GUI logic.
        gui: Non interactive testing of GUI logic.
        win: Windows related testing.
        slow: Test takes long time.
norecursedirs = .hg docs-* explore pyi-hooks TestData
# rootdir
testpaths = ConsumerCheck/tests
# python_files = test_*.py
# python_classes = *Suite
# python_functions = *_test
# pdbcls=modulename:classname
#pdbcls=pdb:Pdb
#pdbcls=pudb.debugger:Debugger
#pdbcls=IPython.terminal.debugger:Pdb
