# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[aliases]
test=pytest


[metadata]
name = ConsumerCheck
version = attr: ConsumerCheck.__version__
summary = Software for analysis of sensory and consumer data
long-description = file: DESCRIPTION.rst
keywords =
    statistic
	education
	science
home-page = https://github.com/TGXnet/consumercheck
author = Thomas Graff
author-email = graff.thomas@gmail.com
maintainer = Oliver Tomic
maintainer-email = olivertomic@zoho.com
classifiers =
    Natural Language :: English
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license = GNU GPLv3
platform = any


[options]
zip_safe = False
include_package_data = True
packages = find:
#scripts =
#    bin/first.py
#    bin/second.py


[sdist]
# formats=zip
# keep-temp=0


[wheel]
# universal = 1


# [flake8]
# ignore = E402,E303
# max-line-length = 160
# exclude = tests/*
# max-complexity = 10


[tool:pytest]
minversion = 2.8.5
addopts = --capture=no
# --verbose -rfEsxXw --assert=rewrite --tb=long --maxfail=2 -m '(not ui) and (not slow)'
markers =
        ui: Require UI interaction.
        renv: Test calculation in R environment.
        model: Test non GUI logic.
        gui: Non interactive testing of GUI logic.
        win: Windows related testing.
        slow: Test takes long time.
norecursedirs = .hg docs-* explore pyi-hooks TestData
# rootdir
testpaths = ConsumerCheck/tests
# python_files = test_*.py
# python_classes = *Suite
# python_functions = *_test
# pdbcls=modulename:classname
#pdbcls=pdb:Pdb
#pdbcls=pudb.debugger:Debugger
#pdbcls=IPython.terminal.debugger:Pdb
